fixed routing issue

--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
             </li>
 
             <li class="scroll text3">
-                <a href="./Page/Services.html"> | SERVICES | <span> SERVICES </span> | SERVICES | <span> SERVICES </span> 
+                <a href="./page/Services.html"> | SERVICES | <span> SERVICES </span> | SERVICES | <span> SERVICES </span> 
                     | SERVICES |<span> SERVICES </span> | SERVICES | <span> SERVICES&nbsp </span> </a>
 
-                <a href="./Page/Services.html"> | SERVICES  | <span> SERVICES </span> | SERVICES  | <span> SERVICES </span> 
+                <a href="./page/Services.html"> | SERVICES  | <span> SERVICES </span> | SERVICES  | <span> SERVICES </span> 
                     | SERVICES  | <span> SERVICES </span> | SERVICES  | <span> SERVICES&nbsp </span> </a>
             </li>
 
             <li class="scroll text2 text4">
-                <a href="./Page/Contact.html"> | CONTACT | <span> CONTACT </span> | CONTACT | <span> CONTACT </span> 
+                <a href="./page/Contact.html"> | CONTACT | <span> CONTACT </span> | CONTACT | <span> CONTACT </span> 
                     | CONTACT |<span> CONTACT </span> | CONTACT | <span> CONTACT&nbsp </span> </a>
 
-                <a href="./Page/Contact.html"> | CONTACT | <span> CONTACT </span> | CONTACT | <span> CONTACT </span> 
+                <a href="./page/Contact.html"> | CONTACT | <span> CONTACT </span> | CONTACT | <span> CONTACT </span> 
                     | CONTACT |<span> CONTACT </span> | CONTACT | <span> CONTACT&nbsp </span> </a>
             </li>
 
